# Gracie-New

./: .gitignore  .replit  Gracie.db  keep_alive.py  main.py  pyproject.toml  replit.nix  requirements.txt
Assets/: constants.py
Assets/Bans/: confessban.txt
Assets/Gracie/: Gracie_Chain.txt  Gracie_Covers.txt  Gracie_Fact.txt  Gracie_FinishTheLyric.txt  Gracie_Gifs.txt  Gracie_Images.txt  Gracie_Lyrics.txt  Gracie_Mvs.txt  Gracie_Projects.txt  Gracie_Taste.txt  Gracie_Tracks.txt  Gracie_Unreleased.txt
Cogs/: HelpCommands.py  _initManager.py  eventListeners.py  gracieCommands.py  helpCommand.py  imagesAndGifs.py  music.py  slashCommands.py  specificCommands.py  trivia.py
Utils/: SomeFunctions.py  TenorGifsupport.py  UnsplashApi.py  db.py  gplayer.py  membeds.py
