[tool.poetry]
name = "gracie-new"
version = "0.1.0"
description = ""
authors = ["Hash <drivelecture@gmail.com>"]
readme = "README.md"
packages = [{include = "gracie_new"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
